--- a/README
+++ b/README
@@ -1,3 +1,2 @@
-This is started file purposed to study git.
-@alterG 18.02.2017 alterg@niuitmo.ru
-
+Program works with 24-bits bmp file. Decode it and rotate clockwise on 90 degreese. Then save result as a new file.
+@alterG 21.02.2017 alterg@niuitmo.ru
